tests/js_error/regexp/overflowing_backreference_index.js
/\987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321/u;